Fix wrong text contrast

--- a/frontend/src/styles/expandable_announcements.module.scss
+++ b/frontend/src/styles/expandable_announcements.module.scss
@@ -16,6 +16,7 @@
     &:hover {
         cursor: pointer;
         background-color: var(--highlight);
+        color: var(--on-primary);
     }
 }
 
